--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,23 @@
-.App {
-  text-align: center;
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+* {
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.container {
+  width: 500px;
+  height: auto;
+  /*border: 1px solid gray;*/
+  margin: 20px auto;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.editor   {
+  width: 500px;
+  height: 500px;
+  border: 5px solid ghostwhite;
 }
