--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color:
 }
 
 * {
@@ -10,11 +11,9 @@ html, body {
 }
 
 .container {
-  /*width: 100%;*/
-  max-width: 960px;
+  max-width: 960px !important;
   height: auto;
-  /*border: 3px solid ghostwhite;*/
-  margin: 20px auto;
+  margin: 0 auto;
   padding: 0 10px 0 10px;
 }
 
@@ -29,4 +28,10 @@ html, body {
   margin: 0;
   padding: 0;
   text-align: right;
+}
+
+.header {
+  width: 100%;
+  height: 500px;
+  background-color: #6290C8;
 }
