--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=VT323');
+
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color:
 }
 
 * {
@@ -28,10 +29,4 @@ html, body {
   margin: 0;
   padding: 0;
   text-align: right;
-}
-
-.header {
-  width: 100%;
-  height: 500px;
-  background-color: #6290C8;
 }
