--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html, body {
   max-width: 960px !important;
   height: auto;
   margin: 0 auto;
-  padding: 0 10px 0 10px;
+  padding: 75px 10px 0 10px;
 }
 
 .center {
