--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@ html, body {
   width: 100%;
   max-width: 960px;
   height: 800px;
-  margin: 0px auto;
-  border: 1px solid black
+  margin: 20px auto;
+  border: 1px solid black;
 }
 
 .canvas {
