--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,15 @@ html, body {
   box-sizing: border-box;
 }
 
+input[type=text] {
+  height: 35px;
+  width: auto;
+  margin: 10px 20px;
+  border-radius: 4px;
+  padding-left: 5px;
+  font-size: 16px
+}
+
 .container {
   max-width: 960px !important;
   height: auto;
