--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=VT323');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Rubik+Mono+One');
 
 
@@ -22,6 +22,13 @@ h1 {
   letter-spacing: 3px
 }
 
+h3 {
+  font-family: 'Lato', sans-serif;
+  font-size: 30px;
+  margin: 0;
+  color: white;
+}
+
 input[type=text] {
   height: 35px;
   width: auto;
@@ -43,10 +50,11 @@ input[type=text] {
 }
 
 .right {
-  width: 100%;
-  margin: 0;
-  padding: 0;
   text-align: right;
+}
+
+.left {
+  text-align: left;
 }
 
 #canvasContainer {
@@ -62,16 +70,12 @@ input[type=text] {
 }
 
 /*Landing Page Styles*/
+.landingMain {
+  padding: 0;
+  background-image: url('./assets/grid16.png');
+}
 
 .landingLogo {
   width: 100% inherit;
   height: auto;
-}
-
-.landingTitle {
-
-}
-
-.border {
-  /*border: 1px solid black;*/
 }
