--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #686865;
+  /*border-right: 3px solid #353531;*/
+  background-color: #353531;
+  background-image: url('./assets/grid16.png');
 }
 
 * {
