--- a/src/App.css
+++ b/src/App.css
@@ -33,19 +33,35 @@ h3 {
 }
 
 input[type=text] {
+  background-color: #EEEEEE;
   height: 35px;
-  width: auto;
-  margin: 10px 20px;
+  width: 225px;
+  margin: 10px 0px;
   border-radius: 4px;
+  border: 1px solid #BEBEBE;
   padding-left: 5px;
-  font-size: 16px
+  font-size: 16px;
+  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: .2s;
+}
+
+input[type=text]:hover {
+  box-shadow: 1px 2px 8px 1px rgba(0, 0, 0, 0.2);
+}
+
+input[type=text]:focus {
+  outline: none;
+}
+
+::-webkit-input-placeholder {
+    color: #BEBEBE;
 }
 
 .container {
   max-width: 960px !important;
   height: auto;
   margin: 0 auto;
-  padding: 75px 10px 0 10px;
+  padding: 10px 10px 0 10px;
 }
 
 .center {
@@ -68,11 +84,6 @@ input[type=text] {
   /*border: 1px solid black;*/
 }
 
-.canvas {
-  border: 1px solid black;
-}
-
-/*Landing Page Styles*/
 .landingMain {
   padding: 0;
   background-image: url('./assets/grid16.png');
@@ -81,4 +92,16 @@ input[type=text] {
 .landingLogo {
   width: 100% inherit;
   height: auto;
+}
+
+.newComponent {
+  margin-top: 60px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.4);
+}
+
+.formContainer {
+  max-width: 825px;
+  margin: 0 auto;
 }
