--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,22 @@ h3 {
   color: white;
 }
 
+th, td {
+  padding: 0px !important;
+  padding-left: 10px !important;
+  height: 0px !important;
+  margin: 0 !important;
+}
+
+div {
+  color: white;
+}
+
 input[type=text] {
   background-color: #EEEEEE;
   height: 35px;
   width: 225px;
-  margin: 10px 0px;
+  margin: 0 0 20px 0;
   border-radius: 4px;
   border: 1px solid #BEBEBE;
   padding-left: 5px;
@@ -104,4 +115,13 @@ input[type=text]:focus {
 .formContainer {
   max-width: 825px;
   margin: 0 auto;
+}
+
+.modal-input {
+  width: 100% !important;
+  margin-top: 20px !important;
+}
+
+.divider {
+  background-color: #3DE292;
 }
