--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
-@import url('https://fonts.googleapis.com/css?family=Rubik+Mono+One');
+@import url('https://fonts.googleapis.com/css?family=Jaldi:700');
 
 
 html, body {
@@ -17,7 +17,7 @@ html, body {
 }
 
 h1 {
-  font-family: 'Rubik Mono One', sans-serif;
+  font-family: 'Jaldi', sans-serif;
   font-size: 50px;
   margin: 5px;
   color: rgb(216, 215, 218);
